src/test/deca/context/valid/decaObjet/extends/02assignation.deca
// Description:
//    Programme affectant à un  un objet avec un sous type
//
// Resultats:
//    02assignation.lis
//
// Historique:
//    cree le 15/06/2022

class A {}

class B extends A {}

{
    A b;
    b = new B();
}